--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,8 @@ h3 {
 .container {
   max-width: 1158px;
   padding: 0 15px;
+  display: flex;
+  margin: 0 auto;
 }
 .section {
   padding-top: 120px;
@@ -121,7 +123,7 @@ h3 {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-left: auto;
+  margin-left: 332px;
 }
 
 .address-item {
@@ -230,6 +232,7 @@ button:focus {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-title {
