--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ h3 {
 .container {
   max-width: 1158px;
   padding: 0 15px;
-  display: flex;
   margin: 0 auto;
 }
 .section {
@@ -101,6 +100,7 @@ h3 {
 .menu {
   display: flex;
   align-items: center;
+  padding: 24px 0;
 }
 
 .menu-item {
@@ -108,7 +108,6 @@ h3 {
   display: flex;
   align-items: center;
   gap: 40px;
-  margin: 24px 0;
 }
 
 .menu-link {
@@ -137,8 +136,9 @@ h3 {
 
 .heroic {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
-.container.heroic {
+.container.heroi {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -163,13 +163,15 @@ h3 {
   color: #fff;
   padding: 16px 32px;
   border-radius: 4px;
+  max-width: 169px;
+  border: none;
 }
 button:hover,
 button:focus {
   background-color: #404bbf;
 }
 .smart {
-  padding-bottom: 95px;
+  padding: 120px 0;
 }
 
 .smart-title {
@@ -181,9 +183,12 @@ button:focus {
 }
 .smart-item {
   display: flex;
+  flex-wrap: wrap;
   gap: 24px;
 }
-
+.smart-link {
+  width: calc((100% - 72px) / 4);
+}
 .smart-ctn {
   font-size: 16px;
   line-height: 1.5;
