--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,8 @@ h3 {
   color: #fff;
   padding: 16px 32px;
   border-radius: 4px;
-  max-width: 169px;
+  min-width: 169px;
+  height: 56px;
   border: none;
 }
 button:hover,
@@ -211,6 +212,7 @@ button:focus {
   color: #2e2f42;
   margin-bottom: 72px;
 }
+
 .team-card {
   background-color: #fff;
   display: flex;
@@ -219,19 +221,22 @@ button:focus {
   align-items: center;
   border-radius: 0 0 4px 4px;
 }
+.user-info {
+  padding: 32px 0;
+}
 .team-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-top: 32px;
+  text-align: center;
   margin-bottom: 8px;
 }
 .team-ctn {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
+  text-align: center;
 }
 .portfolio-item {
   display: flex;
