--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,11 @@ button:focus {
   letter-spacing: 0.02em;
   margin-bottom: 32px;
 }
+.apl {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
 .portfolio-card {
   border-bottom: 1px solid #e7e9fc;
 }
