--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ h3 {
   padding: 0 15px;
   margin: 0 auto;
 }
+.container .header {
+  display: flex;
+}
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
