adjusted mentor attention

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ ul {
 a {
   color: currentColor;
   text-decoration: none;
+  display: block;
 }
 
 a:hover,
@@ -91,16 +92,17 @@ h3 {
   margin-right: 76px;
 }
 
-.header {
+.header-container {
   display: flex;
   align-items: center;
+}
+.header {
   border-bottom: 1px solid #e7e9fc;
 }
 
 .menu {
   display: flex;
   align-items: center;
-  padding: 24px 0;
 }
 
 .menu-item {
@@ -215,10 +217,7 @@ button:focus {
 
 .team-card {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-
-  align-items: center;
+  width: calc((100% - 24px * 3) / 4);
   border-radius: 0 0 4px 4px;
 }
 .user-info {
@@ -254,9 +253,8 @@ button:focus {
   color: #2e2f42;
   margin-bottom: 72px;
 }
-.portfolio-title-card,
+
 .potrfolio-ctn {
-  margin-left: 16px;
 }
 
 .portfolio-title-card {
@@ -264,14 +262,13 @@ button:focus {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-top: 32px;
+
   margin-bottom: 8px;
 }
 .potrfolio-ctn {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
 }
 .apl {
   padding: 32px 16px;
@@ -279,7 +276,7 @@ button:focus {
   border-top: none;
 }
 .portfolio-card {
-  border-bottom: 1px solid #e7e9fc;
+  width: calc((100% - 24px * 2) / 3);
 }
 .footer {
   background-color: #2e2f42;
